config/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    name: nexus
    app: nexus-platform
